syntax = "proto3";

package pubsub;
option go_package="api/pubsub/v1";

service Remote {
  rpc Subscribe(SubscriptionRequest) returns (stream Event);
  rpc Ack(AckRequest) returns (AckResponse);
  rpc Publish(PublishRequest) returns (PublishResponse);
}

// subscribe
message SubscriptionRequest {
  string topic = 1;
  string consumer_id = 2;
}
message Event {
  bytes body = 1;
  string ack_id = 2;
}

// ack
enum AckResult {
  SUCCESS = 0;
  DEAD = 1;
}
message AckRequest {
  string topic = 1;
  string ack_id = 2;
  AckResult result = 3;
}
message AckResponse {}

// publish
message PublishRequest {
  string topic = 1;
  bytes body = 2;
}
message PublishResponse {}
